# icekap

./: configure  configure.in  icekap.kdevelop  subdirs
branches/genericserver/: VERSION  icekap.kdevelop
branches/genericserver/icekap/images/nickicons/alternative/: Makefile.am
branches/genericserver/icekap/images/nickicons/christmas/: Makefile.am
branches/genericserver/icekap/scripts/: Makefile.am  README  mail
branches/genericserver/icekap/src/: Makefile.am  channel.cpp  channelnick.cpp  channeloptionsdialog.cpp  common.cpp  highlight_preferences.cpp  icecapchannel.cpp  icecapchannel.h  icecapgateway.cpp  icecapgateway.h  icecapinputfilter.cpp  icecapmypresence.h  icecapquickconnectdialog.h  icecapserver.cpp  icecapserver.h  images.cpp  ircview.cpp  ircviewbox.h  konversationmainwindow.cpp  konversationmainwindow.h  konversationstatusbar.cpp  konversationstatusbar.h  konvisettingsdialog.cpp  konvisettingsdialog.h  nick.cpp  nickinfo.cpp  nickinfo.h  nicklistview.h  scriptlauncher.cpp  scriptlauncher.h  statuspanel.cpp  statuspanel.h  theme_preferences.cpp  topiclabel.cpp  topiclabel.h  trayicon.cpp  viewcontainer.cpp  viewcontainer.h  viewtreeitem.cpp
branches/genericserver/icekap/src/config/: icekap.kcfg
branches/genericserver/po/en_GB/: icekap.po
dev/: icecap-interaction-raw.txt
icekap/: Makefile.in
icekap/images/: Makefile.in
icekap/images/icons/: Makefile.in
icekap/images/nickicons/: Makefile.in
icekap/images/nickicons/alternative/: Makefile.in
icekap/images/nickicons/christmas/: Makefile.in
icekap/images/nickicons/classic/: Makefile.in
icekap/images/nickicons/default/: Makefile.in
icekap/images/nickicons/smiling/: Makefile.am
icekap/images/nickicons/square/: Makefile.am
icekap/scripts/: Makefile.in
icekap/src/: Makefile.am  Makefile.in  channel.cpp  channel.h  channellistpanel.cpp  channelnick.cpp  channeloptionsdialog.cpp  channeloptionsdialog.h  channelwindow.cpp  channelwindow.h  chatwindow.cpp  chatwindow.h  genericinputfilter.cpp  genericoutputfilter.cpp  genericoutputfilter.h  genericserver.cpp  icecapchannel.cpp  icecapchannel.h  icecapchannelpresence.cpp  icecapinputfilter.cpp  icecapinputfilter.h  icecapmypresence.cpp  icecapmypresence.h  icecapnetwork.cpp  icecapnetwork.h  icecapoutputfilter.cpp  icecapoutputfilter.h  icecappresence.cpp  icecappresence.h  icecapquery.cpp  icecapquery.h  icecapquickconnectdialog.cpp  icecapquickconnectdialog.h  icecapserver.cpp  icecapserver.h  icecapserversettings.cpp  icecapserversettings.h  icecapstatuspanel.cpp  icecapstatuspanel.h  icekapui.rc  (+35 more)
icekap/src/blowfish/: Makefile.in  blowfish.cpp  blowfish.h
icekap/src/config/: Makefile.in  icekap.kcfg  preferences_base.kcfgc
icekap/src/linkaddressbook/: addressbook.cpp  addressbook_base.cpp  kimiface.h
po/en_GB/: Makefile.in  icekap.gmo
trunk/: Doxyfile  Makefile.in  config.h.in  configure.files  configure.in  icekap.kdevelop
trunk/dev/: icecap-interaction-raw.txt  icecap.xmi
trunk/icekap/: Makefile.am
trunk/icekap/images/icons/: Makefile.in
trunk/icekap/images/nickicons/classic/: Makefile.am  Makefile.in
trunk/icekap/images/nickicons/default/: Makefile.am
trunk/icekap/images/nickicons/smiling/: Makefile.in
trunk/icekap/images/nickicons/square/: Makefile.in
trunk/icekap/src/: Makefile.am  Makefile.in  channel.cpp  channellistpanel.cpp  channeloptionsdialog.cpp  channelwindow.cpp  channelwindow.h  chatwindow.cpp  chatwindow.h  genericinputfilter.h  genericserver.h  icecapchannel.cpp  icecapchannel.h  icecapchannelpresence.cpp  icecapchannelpresence.h  icecapinputfilter.cpp  icecapinputfilter.h  icecapmisc.h  icecapmypresence.cpp  icecapmypresence.h  icecapnetwork.cpp  icecapnetwork.h  icecapoutputfilter.cpp  icecapoutputfilter.h  icecappresence.cpp  icecappresence.h  icecapquery.cpp  icecapquery.h  icecapserver.cpp  icecapserver.h  icecapserversettings.h  icecapstatuspanel.cpp  icecapstatuspanel.h  icekap.desktop  icekapircprotocolhandler  icekapui.rc  images.cpp  ircview.cpp  ircview.h  ircviewbox.cpp  (+39 more)
trunk/icekap/src/blowfish/: blowfish.cpp  blowfish.h
trunk/icekap/src/config/: Makefile.am  Makefile.in  preferences.cpp
trunk/icekap/src/linkaddressbook/: Makefile.am  Makefile.in  addressbook.h
trunk/po/: Makefile.in
trunk/po/en_GB/: Makefile.in  icekap.po
